Fix vocab error.

--- a/notebooks/GeoJSON-LD Time.ipynb
+++ b/notebooks/GeoJSON-LD Time.ipynb
@@ -11,22 +11,46 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import json"
+      "import json\n",
+      "\n",
+      "ctx_json = '''\n",
+      "{\"@context\": {\n",
+      "    \"Feature\": \"http://example.com/vocab#Feature\",\n",
+      "    \"Instant\": \"http://www.w3.org/2006/time#Instant\",\n",
+      "    \"Interval\": \"http://www.w3.org/2006/time#Interval\",\n",
+      "    \"Point\": \"http://example.com/vocab#Point\",\n",
+      "    \"coordinates\": \"http://example.com/vocab#coordinates\",\n",
+      "    \"datetime\": \"http://www.w3.org/2006/time#inXSDDateTime\",\n",
+      "    \"earliest\": \"http://example.com/vocab#earliest\",\n",
+      "    \"geometry\": \"http://example.com/vocab#geometry\",\n",
+      "    \"id\": \"http://example.com/vocab#id\",\n",
+      "    \"latest\": \"http://example.com/vocab#latest\",\n",
+      "    \"properties\": \"http://example.com/vocab#properties\",\n",
+      "    \"start\": \"http://www.w3.org/2006/time#hasBeginning\",\n",
+      "    \"stop\": \"http://www.w3.org/2006/time#hasEnding\",\n",
+      "    \"type\": \"http://example.com/vocab#type\",\n",
+      "    \"when\": \"http://example.com/vocab#when\"\n",
+      "  }}'''\n",
+      "\n",
+      "ctx = json.loads(ctx_json)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "instant = {\n",
+      "    '@context': ctx['@context'],\n",
+      "    'id': '1',\n",
+      "    'properties': {},\n",
       "    'type': 'Feature',\n",
       "    'geometry': {'type': 'Point', 'coordinates': [0.0, 0.0]},\n",
       "    'when': {'type': 'Instant', 'datetime': '2014-04-24'}}\n",
-      "print json.dumps(instant, indent=2)"
+      "print json.dumps(instant, sort_keys=True, indent=2)"
      ],
      "language": "python",
      "metadata": {},
@@ -36,33 +60,55 @@
        "stream": "stdout",
        "text": [
         "{\n",
+        "  \"@context\": {\n",
+        "    \"Feature\": \"http://example.com/vocab#Feature\", \n",
+        "    \"Instant\": \"http://www.w3.org/2006/time#Instant\", \n",
+        "    \"Interval\": \"http://www.w3.org/2006/time#Interval\", \n",
+        "    \"Point\": \"http://example.com/vocab#Point\", \n",
+        "    \"coordinates\": \"http://example.com/vocab#coordinates\", \n",
+        "    \"datetime\": \"http://www.w3.org/2006/time#inXSDDateTime\", \n",
+        "    \"earliest\": \"http://example.com/vocab#earliest\", \n",
+        "    \"geometry\": \"http://example.com/vocab#geometry\", \n",
+        "    \"id\": \"http://example.com/vocab#id\", \n",
+        "    \"latest\": \"http://example.com/vocab#latest\", \n",
+        "    \"properties\": \"http://example.com/vocab#properties\", \n",
+        "    \"start\": \"http://www.w3.org/2006/time#hasBeginning\", \n",
+        "    \"stop\": \"http://www.w3.org/2006/time#hasEnding\", \n",
+        "    \"type\": \"http://example.com/vocab#type\", \n",
+        "    \"when\": \"http://example.com/vocab#when\"\n",
+        "  }, \n",
         "  \"geometry\": {\n",
-        "    \"type\": \"Point\", \n",
         "    \"coordinates\": [\n",
         "      0.0, \n",
         "      0.0\n",
-        "    ]\n",
+        "    ], \n",
+        "    \"type\": \"Point\"\n",
         "  }, \n",
+        "  \"id\": \"1\", \n",
+        "  \"properties\": {}, \n",
+        "  \"type\": \"Feature\", \n",
         "  \"when\": {\n",
-        "    \"type\": \"Instant\", \n",
-        "    \"datetime\": \"2014-04-24\"\n",
-        "  }, \n",
-        "  \"type\": \"Feature\"\n",
+        "    \"datetime\": \"2014-04-24\", \n",
+        "    \"type\": \"Instant\"\n",
+        "  }\n",
         "}\n"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "interval = {\n",
+      "    '@context': ctx['@context'],\n",
+      "    'id': '1',\n",
+      "    'properties': {},\n",
       "    'type': 'Feature',\n",
       "    'geometry': {'type': 'Point', 'coordinates': [0.0, 0.0]},\n",
       "    'when': {'type': 'Interval', 'start': '2014-04-24', 'stop': '2014-04-25'}}\n",
-      "print json.dumps(interval, indent=2)"
+      "print json.dumps(interval, sort_keys=True, indent=2)"
      ],
      "language": "python",
      "metadata": {},
@@ -72,34 +118,56 @@
        "stream": "stdout",
        "text": [
         "{\n",
+        "  \"@context\": {\n",
+        "    \"Feature\": \"http://example.com/vocab#Feature\", \n",
+        "    \"Instant\": \"http://www.w3.org/2006/time#Instant\", \n",
+        "    \"Interval\": \"http://www.w3.org/2006/time#Interval\", \n",
+        "    \"Point\": \"http://example.com/vocab#Point\", \n",
+        "    \"coordinates\": \"http://example.com/vocab#coordinates\", \n",
+        "    \"datetime\": \"http://www.w3.org/2006/time#inXSDDateTime\", \n",
+        "    \"earliest\": \"http://example.com/vocab#earliest\", \n",
+        "    \"geometry\": \"http://example.com/vocab#geometry\", \n",
+        "    \"id\": \"http://example.com/vocab#id\", \n",
+        "    \"latest\": \"http://example.com/vocab#latest\", \n",
+        "    \"properties\": \"http://example.com/vocab#properties\", \n",
+        "    \"start\": \"http://www.w3.org/2006/time#hasBeginning\", \n",
+        "    \"stop\": \"http://www.w3.org/2006/time#hasEnding\", \n",
+        "    \"type\": \"http://example.com/vocab#type\", \n",
+        "    \"when\": \"http://example.com/vocab#when\"\n",
+        "  }, \n",
         "  \"geometry\": {\n",
-        "    \"type\": \"Point\", \n",
         "    \"coordinates\": [\n",
         "      0.0, \n",
         "      0.0\n",
-        "    ]\n",
+        "    ], \n",
+        "    \"type\": \"Point\"\n",
         "  }, \n",
+        "  \"id\": \"1\", \n",
+        "  \"properties\": {}, \n",
+        "  \"type\": \"Feature\", \n",
         "  \"when\": {\n",
-        "    \"stop\": \"2014-04-25\", \n",
         "    \"start\": \"2014-04-24\", \n",
+        "    \"stop\": \"2014-04-25\", \n",
         "    \"type\": \"Interval\"\n",
-        "  }, \n",
-        "  \"type\": \"Feature\"\n",
+        "  }\n",
         "}\n"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "since = {\n",
+      "    '@context': ctx['@context'],\n",
+      "    'id': '1',\n",
+      "    'properties': {},\n",
       "    'type': 'Feature',\n",
       "    'geometry': {'type': 'Point', 'coordinates': [0.0, 0.0]},\n",
       "    'when': {'type': 'Interval', 'start': '2014-04-24'}}\n",
-      "print json.dumps(since, indent=2)"
+      "print json.dumps(since, sort_keys=True, indent=2)"
      ],
      "language": "python",
      "metadata": {},
@@ -109,33 +177,55 @@
        "stream": "stdout",
        "text": [
         "{\n",
+        "  \"@context\": {\n",
+        "    \"Feature\": \"http://example.com/vocab#Feature\", \n",
+        "    \"Instant\": \"http://www.w3.org/2006/time#Instant\", \n",
+        "    \"Interval\": \"http://www.w3.org/2006/time#Interval\", \n",
+        "    \"Point\": \"http://example.com/vocab#Point\", \n",
+        "    \"coordinates\": \"http://example.com/vocab#coordinates\", \n",
+        "    \"datetime\": \"http://www.w3.org/2006/time#inXSDDateTime\", \n",
+        "    \"earliest\": \"http://example.com/vocab#earliest\", \n",
+        "    \"geometry\": \"http://example.com/vocab#geometry\", \n",
+        "    \"id\": \"http://example.com/vocab#id\", \n",
+        "    \"latest\": \"http://example.com/vocab#latest\", \n",
+        "    \"properties\": \"http://example.com/vocab#properties\", \n",
+        "    \"start\": \"http://www.w3.org/2006/time#hasBeginning\", \n",
+        "    \"stop\": \"http://www.w3.org/2006/time#hasEnding\", \n",
+        "    \"type\": \"http://example.com/vocab#type\", \n",
+        "    \"when\": \"http://example.com/vocab#when\"\n",
+        "  }, \n",
         "  \"geometry\": {\n",
-        "    \"type\": \"Point\", \n",
         "    \"coordinates\": [\n",
         "      0.0, \n",
         "      0.0\n",
-        "    ]\n",
+        "    ], \n",
+        "    \"type\": \"Point\"\n",
         "  }, \n",
+        "  \"id\": \"1\", \n",
+        "  \"properties\": {}, \n",
+        "  \"type\": \"Feature\", \n",
         "  \"when\": {\n",
         "    \"start\": \"2014-04-24\", \n",
         "    \"type\": \"Interval\"\n",
-        "  }, \n",
-        "  \"type\": \"Feature\"\n",
+        "  }\n",
         "}\n"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "fuzzy = {\n",
+      "    '@context': ctx['@context'],\n",
+      "    'id': '1',\n",
+      "    'properties': {},\n",
       "    'type': 'Feature',\n",
       "    'geometry': {'type': 'Point', 'coordinates': [0.0, 0.0]},\n",
       "    'when': {'type': 'Instant', 'datetime': '2014-04-24', 'earliest': '2014-04-23', 'latest': '2014-04-25'}}\n",
-      "print json.dumps(fuzzy, indent=2)"
+      "print json.dumps(fuzzy, sort_keys=True, indent=2)"
      ],
      "language": "python",
      "metadata": {},
@@ -145,35 +235,57 @@
        "stream": "stdout",
        "text": [
         "{\n",
+        "  \"@context\": {\n",
+        "    \"Feature\": \"http://example.com/vocab#Feature\", \n",
+        "    \"Instant\": \"http://www.w3.org/2006/time#Instant\", \n",
+        "    \"Interval\": \"http://www.w3.org/2006/time#Interval\", \n",
+        "    \"Point\": \"http://example.com/vocab#Point\", \n",
+        "    \"coordinates\": \"http://example.com/vocab#coordinates\", \n",
+        "    \"datetime\": \"http://www.w3.org/2006/time#inXSDDateTime\", \n",
+        "    \"earliest\": \"http://example.com/vocab#earliest\", \n",
+        "    \"geometry\": \"http://example.com/vocab#geometry\", \n",
+        "    \"id\": \"http://example.com/vocab#id\", \n",
+        "    \"latest\": \"http://example.com/vocab#latest\", \n",
+        "    \"properties\": \"http://example.com/vocab#properties\", \n",
+        "    \"start\": \"http://www.w3.org/2006/time#hasBeginning\", \n",
+        "    \"stop\": \"http://www.w3.org/2006/time#hasEnding\", \n",
+        "    \"type\": \"http://example.com/vocab#type\", \n",
+        "    \"when\": \"http://example.com/vocab#when\"\n",
+        "  }, \n",
         "  \"geometry\": {\n",
-        "    \"type\": \"Point\", \n",
         "    \"coordinates\": [\n",
         "      0.0, \n",
         "      0.0\n",
-        "    ]\n",
+        "    ], \n",
+        "    \"type\": \"Point\"\n",
         "  }, \n",
+        "  \"id\": \"1\", \n",
+        "  \"properties\": {}, \n",
+        "  \"type\": \"Feature\", \n",
         "  \"when\": {\n",
+        "    \"datetime\": \"2014-04-24\", \n",
         "    \"earliest\": \"2014-04-23\", \n",
-        "    \"type\": \"Instant\", \n",
         "    \"latest\": \"2014-04-25\", \n",
-        "    \"datetime\": \"2014-04-24\"\n",
-        "  }, \n",
-        "  \"type\": \"Feature\"\n",
+        "    \"type\": \"Instant\"\n",
+        "  }\n",
         "}\n"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "fuzzy_interval = {\n",
+      "    '@context': ctx['@context'],\n",
+      "    'id': '1',\n",
+      "    'properties': {},\n",
       "    'type': 'Feature',\n",
       "    'geometry': {'type': 'Point', 'coordinates': [0.0, 0.0]},\n",
       "    'when': {'type': 'Interval', 'start': '2014-04-24', 'earliest': '2014-04-23'}}\n",
-      "print json.dumps(fuzzy_interval, indent=2)"
+      "print json.dumps(fuzzy_interval, sort_keys=True, indent=2)"
      ],
      "language": "python",
      "metadata": {},
@@ -183,24 +295,43 @@
        "stream": "stdout",
        "text": [
         "{\n",
+        "  \"@context\": {\n",
+        "    \"Feature\": \"http://example.com/vocab#Feature\", \n",
+        "    \"Instant\": \"http://www.w3.org/2006/time#Instant\", \n",
+        "    \"Interval\": \"http://www.w3.org/2006/time#Interval\", \n",
+        "    \"Point\": \"http://example.com/vocab#Point\", \n",
+        "    \"coordinates\": \"http://example.com/vocab#coordinates\", \n",
+        "    \"datetime\": \"http://www.w3.org/2006/time#inXSDDateTime\", \n",
+        "    \"earliest\": \"http://example.com/vocab#earliest\", \n",
+        "    \"geometry\": \"http://example.com/vocab#geometry\", \n",
+        "    \"id\": \"http://example.com/vocab#id\", \n",
+        "    \"latest\": \"http://example.com/vocab#latest\", \n",
+        "    \"properties\": \"http://example.com/vocab#properties\", \n",
+        "    \"start\": \"http://www.w3.org/2006/time#hasBeginning\", \n",
+        "    \"stop\": \"http://www.w3.org/2006/time#hasEnding\", \n",
+        "    \"type\": \"http://example.com/vocab#type\", \n",
+        "    \"when\": \"http://example.com/vocab#when\"\n",
+        "  }, \n",
         "  \"geometry\": {\n",
-        "    \"type\": \"Point\", \n",
         "    \"coordinates\": [\n",
         "      0.0, \n",
         "      0.0\n",
-        "    ]\n",
+        "    ], \n",
+        "    \"type\": \"Point\"\n",
         "  }, \n",
+        "  \"id\": \"1\", \n",
+        "  \"properties\": {}, \n",
+        "  \"type\": \"Feature\", \n",
         "  \"when\": {\n",
-        "    \"start\": \"2014-04-24\", \n",
         "    \"earliest\": \"2014-04-23\", \n",
+        "    \"start\": \"2014-04-24\", \n",
         "    \"type\": \"Interval\"\n",
-        "  }, \n",
-        "  \"type\": \"Feature\"\n",
+        "  }\n",
         "}\n"
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
