--- a/notebooks/GeoJSON-LD Time.ipynb
+++ b/notebooks/GeoJSON-LD Time.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": ""
+  "name": "",
+  "signature": "sha256:b2c4c7cc07e8f9772ade0df9759fd1f01c78fc857ed40999d0b402de3d26c8e0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -8,36 +9,31 @@
   {
    "cells": [
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# GeoJSON-LD Time Examples\n",
+      "\n",
+      "Please note the following\n",
+      "\n",
+      "- Finalized identifiers will use geojson.org, not example.com, URIs\n",
+      "- \"earliest\" and \"latest\" are still being discussed\n",
+      "- the sense of imprecise datetimes like 'datetime': '2014-04-24' is still being discussed"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "import json\n",
       "\n",
-      "ctx_json = '''\n",
-      "{\"@context\": {\n",
-      "    \"Feature\": \"http://example.com/vocab#Feature\",\n",
-      "    \"Instant\": \"http://www.w3.org/2006/time#Instant\",\n",
-      "    \"Interval\": \"http://www.w3.org/2006/time#Interval\",\n",
-      "    \"Point\": \"http://example.com/vocab#Point\",\n",
-      "    \"coordinates\": \"http://example.com/vocab#coordinates\",\n",
-      "    \"datetime\": \"http://www.w3.org/2006/time#inXSDDateTime\",\n",
-      "    \"earliest\": \"http://example.com/vocab#earliest\",\n",
-      "    \"geometry\": \"http://example.com/vocab#geometry\",\n",
-      "    \"id\": \"http://example.com/vocab#id\",\n",
-      "    \"latest\": \"http://example.com/vocab#latest\",\n",
-      "    \"properties\": \"http://example.com/vocab#properties\",\n",
-      "    \"start\": \"http://www.w3.org/2006/time#hasBeginning\",\n",
-      "    \"stop\": \"http://www.w3.org/2006/time#hasEnding\",\n",
-      "    \"type\": \"http://example.com/vocab#type\",\n",
-      "    \"when\": \"http://example.com/vocab#when\"\n",
-      "  }}'''\n",
-      "\n",
-      "ctx = json.loads(ctx_json)"
+      "with open(\"../contexts/geojson-time.jsonld\") as f:\n",
+      "    ctx = json.load(f)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -46,10 +42,10 @@
       "instant = {\n",
       "    '@context': ctx['@context'],\n",
       "    'id': '1',\n",
-      "    'properties': {},\n",
+      "    'properties': {'title': 'Instant Example'},\n",
       "    'type': 'Feature',\n",
       "    'geometry': {'type': 'Point', 'coordinates': [0.0, 0.0]},\n",
-      "    'when': {'type': 'Instant', 'datetime': '2014-04-24'}}\n",
+      "    'when': {'@type': 'Instant', 'datetime': '2014-04-24'}}\n",
       "print json.dumps(instant, sort_keys=True, indent=2)"
      ],
      "language": "python",
@@ -62,18 +58,35 @@
         "{\n",
         "  \"@context\": {\n",
         "    \"Feature\": \"http://example.com/vocab#Feature\", \n",
+        "    \"FeatureCollection\": \"http://example.com/vocab#FeatureCollection\", \n",
+        "    \"GeometryCollection\": \"http://example.com/vocab#GeometryCollection\", \n",
         "    \"Instant\": \"http://www.w3.org/2006/time#Instant\", \n",
         "    \"Interval\": \"http://www.w3.org/2006/time#Interval\", \n",
+        "    \"LineString\": \"http://example.com/vocab#LineString\", \n",
+        "    \"MultiLineString\": \"http://example.com/vocab#MultiLineString\", \n",
+        "    \"MultiPoint\": \"http://example.com/vocab#MultiPoint\", \n",
+        "    \"MultiPolygon\": \"http://example.com/vocab#MultiPolygon\", \n",
         "    \"Point\": \"http://example.com/vocab#Point\", \n",
+        "    \"Polygon\": \"http://example.com/vocab#Polygon\", \n",
+        "    \"bbox\": {\n",
+        "      \"@container\": \"@list\", \n",
+        "      \"@id\": \"http://example.com/vocab#bbox\"\n",
+        "    }, \n",
         "    \"coordinates\": \"http://example.com/vocab#coordinates\", \n",
         "    \"datetime\": \"http://www.w3.org/2006/time#inXSDDateTime\", \n",
+        "    \"description\": \"http://purl.org/dc/terms/description\", \n",
         "    \"earliest\": \"http://example.com/vocab#earliest\", \n",
+        "    \"features\": {\n",
+        "      \"@container\": \"@set\", \n",
+        "      \"@id\": \"http://example.com/vocab#features\"\n",
+        "    }, \n",
         "    \"geometry\": \"http://example.com/vocab#geometry\", \n",
         "    \"id\": \"http://example.com/vocab#id\", \n",
         "    \"latest\": \"http://example.com/vocab#latest\", \n",
         "    \"properties\": \"http://example.com/vocab#properties\", \n",
         "    \"start\": \"http://www.w3.org/2006/time#hasBeginning\", \n",
         "    \"stop\": \"http://www.w3.org/2006/time#hasEnding\", \n",
+        "    \"title\": \"http://purl.org/dc/terms/title\", \n",
         "    \"type\": \"http://example.com/vocab#type\", \n",
         "    \"when\": \"http://example.com/vocab#when\"\n",
         "  }, \n",
@@ -85,11 +98,13 @@
         "    \"type\": \"Point\"\n",
         "  }, \n",
         "  \"id\": \"1\", \n",
-        "  \"properties\": {}, \n",
+        "  \"properties\": {\n",
+        "    \"title\": \"Instant Example\"\n",
+        "  }, \n",
         "  \"type\": \"Feature\", \n",
         "  \"when\": {\n",
-        "    \"datetime\": \"2014-04-24\", \n",
-        "    \"type\": \"Instant\"\n",
+        "    \"@type\": \"Instant\", \n",
+        "    \"datetime\": \"2014-04-24\"\n",
         "  }\n",
         "}\n"
        ]
@@ -104,10 +119,10 @@
       "interval = {\n",
       "    '@context': ctx['@context'],\n",
       "    'id': '1',\n",
-      "    'properties': {},\n",
+      "    'properties': {'title': 'Interval Example'},\n",
       "    'type': 'Feature',\n",
       "    'geometry': {'type': 'Point', 'coordinates': [0.0, 0.0]},\n",
-      "    'when': {'type': 'Interval', 'start': '2014-04-24', 'stop': '2014-04-25'}}\n",
+      "    'when': {'@type': 'Interval', 'start': '2014-04-24', 'stop': '2014-04-25'}}\n",
       "print json.dumps(interval, sort_keys=True, indent=2)"
      ],
      "language": "python",
@@ -120,18 +135,35 @@
         "{\n",
         "  \"@context\": {\n",
         "    \"Feature\": \"http://example.com/vocab#Feature\", \n",
+        "    \"FeatureCollection\": \"http://example.com/vocab#FeatureCollection\", \n",
+        "    \"GeometryCollection\": \"http://example.com/vocab#GeometryCollection\", \n",
         "    \"Instant\": \"http://www.w3.org/2006/time#Instant\", \n",
         "    \"Interval\": \"http://www.w3.org/2006/time#Interval\", \n",
+        "    \"LineString\": \"http://example.com/vocab#LineString\", \n",
+        "    \"MultiLineString\": \"http://example.com/vocab#MultiLineString\", \n",
+        "    \"MultiPoint\": \"http://example.com/vocab#MultiPoint\", \n",
+        "    \"MultiPolygon\": \"http://example.com/vocab#MultiPolygon\", \n",
         "    \"Point\": \"http://example.com/vocab#Point\", \n",
+        "    \"Polygon\": \"http://example.com/vocab#Polygon\", \n",
+        "    \"bbox\": {\n",
+        "      \"@container\": \"@list\", \n",
+        "      \"@id\": \"http://example.com/vocab#bbox\"\n",
+        "    }, \n",
         "    \"coordinates\": \"http://example.com/vocab#coordinates\", \n",
         "    \"datetime\": \"http://www.w3.org/2006/time#inXSDDateTime\", \n",
+        "    \"description\": \"http://purl.org/dc/terms/description\", \n",
         "    \"earliest\": \"http://example.com/vocab#earliest\", \n",
+        "    \"features\": {\n",
+        "      \"@container\": \"@set\", \n",
+        "      \"@id\": \"http://example.com/vocab#features\"\n",
+        "    }, \n",
         "    \"geometry\": \"http://example.com/vocab#geometry\", \n",
         "    \"id\": \"http://example.com/vocab#id\", \n",
         "    \"latest\": \"http://example.com/vocab#latest\", \n",
         "    \"properties\": \"http://example.com/vocab#properties\", \n",
         "    \"start\": \"http://www.w3.org/2006/time#hasBeginning\", \n",
         "    \"stop\": \"http://www.w3.org/2006/time#hasEnding\", \n",
+        "    \"title\": \"http://purl.org/dc/terms/title\", \n",
         "    \"type\": \"http://example.com/vocab#type\", \n",
         "    \"when\": \"http://example.com/vocab#when\"\n",
         "  }, \n",
@@ -143,12 +175,14 @@
         "    \"type\": \"Point\"\n",
         "  }, \n",
         "  \"id\": \"1\", \n",
-        "  \"properties\": {}, \n",
+        "  \"properties\": {\n",
+        "    \"title\": \"Interval Example\"\n",
+        "  }, \n",
         "  \"type\": \"Feature\", \n",
         "  \"when\": {\n",
+        "    \"@type\": \"Interval\", \n",
         "    \"start\": \"2014-04-24\", \n",
-        "    \"stop\": \"2014-04-25\", \n",
-        "    \"type\": \"Interval\"\n",
+        "    \"stop\": \"2014-04-25\"\n",
         "  }\n",
         "}\n"
        ]
@@ -163,10 +197,10 @@
       "since = {\n",
       "    '@context': ctx['@context'],\n",
       "    'id': '1',\n",
-      "    'properties': {},\n",
+      "    'properties': {'title': 'Open-ended Interval Example'},\n",
       "    'type': 'Feature',\n",
       "    'geometry': {'type': 'Point', 'coordinates': [0.0, 0.0]},\n",
-      "    'when': {'type': 'Interval', 'start': '2014-04-24'}}\n",
+      "    'when': {'@type': 'Interval', 'start': '2014-04-24'}}\n",
       "print json.dumps(since, sort_keys=True, indent=2)"
      ],
      "language": "python",
@@ -179,18 +213,35 @@
         "{\n",
         "  \"@context\": {\n",
         "    \"Feature\": \"http://example.com/vocab#Feature\", \n",
+        "    \"FeatureCollection\": \"http://example.com/vocab#FeatureCollection\", \n",
+        "    \"GeometryCollection\": \"http://example.com/vocab#GeometryCollection\", \n",
         "    \"Instant\": \"http://www.w3.org/2006/time#Instant\", \n",
         "    \"Interval\": \"http://www.w3.org/2006/time#Interval\", \n",
+        "    \"LineString\": \"http://example.com/vocab#LineString\", \n",
+        "    \"MultiLineString\": \"http://example.com/vocab#MultiLineString\", \n",
+        "    \"MultiPoint\": \"http://example.com/vocab#MultiPoint\", \n",
+        "    \"MultiPolygon\": \"http://example.com/vocab#MultiPolygon\", \n",
         "    \"Point\": \"http://example.com/vocab#Point\", \n",
+        "    \"Polygon\": \"http://example.com/vocab#Polygon\", \n",
+        "    \"bbox\": {\n",
+        "      \"@container\": \"@list\", \n",
+        "      \"@id\": \"http://example.com/vocab#bbox\"\n",
+        "    }, \n",
         "    \"coordinates\": \"http://example.com/vocab#coordinates\", \n",
         "    \"datetime\": \"http://www.w3.org/2006/time#inXSDDateTime\", \n",
+        "    \"description\": \"http://purl.org/dc/terms/description\", \n",
         "    \"earliest\": \"http://example.com/vocab#earliest\", \n",
+        "    \"features\": {\n",
+        "      \"@container\": \"@set\", \n",
+        "      \"@id\": \"http://example.com/vocab#features\"\n",
+        "    }, \n",
         "    \"geometry\": \"http://example.com/vocab#geometry\", \n",
         "    \"id\": \"http://example.com/vocab#id\", \n",
         "    \"latest\": \"http://example.com/vocab#latest\", \n",
         "    \"properties\": \"http://example.com/vocab#properties\", \n",
         "    \"start\": \"http://www.w3.org/2006/time#hasBeginning\", \n",
         "    \"stop\": \"http://www.w3.org/2006/time#hasEnding\", \n",
+        "    \"title\": \"http://purl.org/dc/terms/title\", \n",
         "    \"type\": \"http://example.com/vocab#type\", \n",
         "    \"when\": \"http://example.com/vocab#when\"\n",
         "  }, \n",
@@ -202,11 +253,13 @@
         "    \"type\": \"Point\"\n",
         "  }, \n",
         "  \"id\": \"1\", \n",
-        "  \"properties\": {}, \n",
+        "  \"properties\": {\n",
+        "    \"title\": \"Open-ended Interval Example\"\n",
+        "  }, \n",
         "  \"type\": \"Feature\", \n",
         "  \"when\": {\n",
-        "    \"start\": \"2014-04-24\", \n",
-        "    \"type\": \"Interval\"\n",
+        "    \"@type\": \"Interval\", \n",
+        "    \"start\": \"2014-04-24\"\n",
         "  }\n",
         "}\n"
        ]
@@ -221,10 +274,10 @@
       "fuzzy = {\n",
       "    '@context': ctx['@context'],\n",
       "    'id': '1',\n",
-      "    'properties': {},\n",
+      "    'properties': {'title': 'Fuzzy Instant Example'},\n",
       "    'type': 'Feature',\n",
       "    'geometry': {'type': 'Point', 'coordinates': [0.0, 0.0]},\n",
-      "    'when': {'type': 'Instant', 'datetime': '2014-04-24', 'earliest': '2014-04-23', 'latest': '2014-04-25'}}\n",
+      "    'when': {'@type': 'Instant', 'datetime': '2014-04-24', 'earliest': '2014-04-23', 'latest': '2014-04-25'}}\n",
       "print json.dumps(fuzzy, sort_keys=True, indent=2)"
      ],
      "language": "python",
@@ -237,18 +290,35 @@
         "{\n",
         "  \"@context\": {\n",
         "    \"Feature\": \"http://example.com/vocab#Feature\", \n",
+        "    \"FeatureCollection\": \"http://example.com/vocab#FeatureCollection\", \n",
+        "    \"GeometryCollection\": \"http://example.com/vocab#GeometryCollection\", \n",
         "    \"Instant\": \"http://www.w3.org/2006/time#Instant\", \n",
         "    \"Interval\": \"http://www.w3.org/2006/time#Interval\", \n",
+        "    \"LineString\": \"http://example.com/vocab#LineString\", \n",
+        "    \"MultiLineString\": \"http://example.com/vocab#MultiLineString\", \n",
+        "    \"MultiPoint\": \"http://example.com/vocab#MultiPoint\", \n",
+        "    \"MultiPolygon\": \"http://example.com/vocab#MultiPolygon\", \n",
         "    \"Point\": \"http://example.com/vocab#Point\", \n",
+        "    \"Polygon\": \"http://example.com/vocab#Polygon\", \n",
+        "    \"bbox\": {\n",
+        "      \"@container\": \"@list\", \n",
+        "      \"@id\": \"http://example.com/vocab#bbox\"\n",
+        "    }, \n",
         "    \"coordinates\": \"http://example.com/vocab#coordinates\", \n",
         "    \"datetime\": \"http://www.w3.org/2006/time#inXSDDateTime\", \n",
+        "    \"description\": \"http://purl.org/dc/terms/description\", \n",
         "    \"earliest\": \"http://example.com/vocab#earliest\", \n",
+        "    \"features\": {\n",
+        "      \"@container\": \"@set\", \n",
+        "      \"@id\": \"http://example.com/vocab#features\"\n",
+        "    }, \n",
         "    \"geometry\": \"http://example.com/vocab#geometry\", \n",
         "    \"id\": \"http://example.com/vocab#id\", \n",
         "    \"latest\": \"http://example.com/vocab#latest\", \n",
         "    \"properties\": \"http://example.com/vocab#properties\", \n",
         "    \"start\": \"http://www.w3.org/2006/time#hasBeginning\", \n",
         "    \"stop\": \"http://www.w3.org/2006/time#hasEnding\", \n",
+        "    \"title\": \"http://purl.org/dc/terms/title\", \n",
         "    \"type\": \"http://example.com/vocab#type\", \n",
         "    \"when\": \"http://example.com/vocab#when\"\n",
         "  }, \n",
@@ -260,13 +330,15 @@
         "    \"type\": \"Point\"\n",
         "  }, \n",
         "  \"id\": \"1\", \n",
-        "  \"properties\": {}, \n",
+        "  \"properties\": {\n",
+        "    \"title\": \"Fuzzy Instant Example\"\n",
+        "  }, \n",
         "  \"type\": \"Feature\", \n",
         "  \"when\": {\n",
+        "    \"@type\": \"Instant\", \n",
         "    \"datetime\": \"2014-04-24\", \n",
         "    \"earliest\": \"2014-04-23\", \n",
-        "    \"latest\": \"2014-04-25\", \n",
-        "    \"type\": \"Instant\"\n",
+        "    \"latest\": \"2014-04-25\"\n",
         "  }\n",
         "}\n"
        ]
@@ -281,10 +353,10 @@
       "fuzzy_interval = {\n",
       "    '@context': ctx['@context'],\n",
       "    'id': '1',\n",
-      "    'properties': {},\n",
+      "    'properties': {'title': 'Fuzzy Interval Example'},\n",
       "    'type': 'Feature',\n",
       "    'geometry': {'type': 'Point', 'coordinates': [0.0, 0.0]},\n",
-      "    'when': {'type': 'Interval', 'start': '2014-04-24', 'earliest': '2014-04-23'}}\n",
+      "    'when': {'@type': 'Interval', 'start': '2014-04-24', 'earliest': '2014-04-23'}}\n",
       "print json.dumps(fuzzy_interval, sort_keys=True, indent=2)"
      ],
      "language": "python",
@@ -297,18 +369,35 @@
         "{\n",
         "  \"@context\": {\n",
         "    \"Feature\": \"http://example.com/vocab#Feature\", \n",
+        "    \"FeatureCollection\": \"http://example.com/vocab#FeatureCollection\", \n",
+        "    \"GeometryCollection\": \"http://example.com/vocab#GeometryCollection\", \n",
         "    \"Instant\": \"http://www.w3.org/2006/time#Instant\", \n",
         "    \"Interval\": \"http://www.w3.org/2006/time#Interval\", \n",
+        "    \"LineString\": \"http://example.com/vocab#LineString\", \n",
+        "    \"MultiLineString\": \"http://example.com/vocab#MultiLineString\", \n",
+        "    \"MultiPoint\": \"http://example.com/vocab#MultiPoint\", \n",
+        "    \"MultiPolygon\": \"http://example.com/vocab#MultiPolygon\", \n",
         "    \"Point\": \"http://example.com/vocab#Point\", \n",
+        "    \"Polygon\": \"http://example.com/vocab#Polygon\", \n",
+        "    \"bbox\": {\n",
+        "      \"@container\": \"@list\", \n",
+        "      \"@id\": \"http://example.com/vocab#bbox\"\n",
+        "    }, \n",
         "    \"coordinates\": \"http://example.com/vocab#coordinates\", \n",
         "    \"datetime\": \"http://www.w3.org/2006/time#inXSDDateTime\", \n",
+        "    \"description\": \"http://purl.org/dc/terms/description\", \n",
         "    \"earliest\": \"http://example.com/vocab#earliest\", \n",
+        "    \"features\": {\n",
+        "      \"@container\": \"@set\", \n",
+        "      \"@id\": \"http://example.com/vocab#features\"\n",
+        "    }, \n",
         "    \"geometry\": \"http://example.com/vocab#geometry\", \n",
         "    \"id\": \"http://example.com/vocab#id\", \n",
         "    \"latest\": \"http://example.com/vocab#latest\", \n",
         "    \"properties\": \"http://example.com/vocab#properties\", \n",
         "    \"start\": \"http://www.w3.org/2006/time#hasBeginning\", \n",
         "    \"stop\": \"http://www.w3.org/2006/time#hasEnding\", \n",
+        "    \"title\": \"http://purl.org/dc/terms/title\", \n",
         "    \"type\": \"http://example.com/vocab#type\", \n",
         "    \"when\": \"http://example.com/vocab#when\"\n",
         "  }, \n",
@@ -320,26 +409,20 @@
         "    \"type\": \"Point\"\n",
         "  }, \n",
         "  \"id\": \"1\", \n",
-        "  \"properties\": {}, \n",
+        "  \"properties\": {\n",
+        "    \"title\": \"Fuzzy Interval Example\"\n",
+        "  }, \n",
         "  \"type\": \"Feature\", \n",
         "  \"when\": {\n",
+        "    \"@type\": \"Interval\", \n",
         "    \"earliest\": \"2014-04-23\", \n",
-        "    \"start\": \"2014-04-24\", \n",
-        "    \"type\": \"Interval\"\n",
+        "    \"start\": \"2014-04-24\"\n",
         "  }\n",
         "}\n"
        ]
       }
      ],
-     "prompt_number": 17
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "prompt_number": 18
     }
    ],
    "metadata": {}
